<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="console"></string>
    <string name="app_name">Port Detective</string>
    <string name="HostIPAddressString">Host IP Address:</string>
    <string name="PortRangeString">Port Ranges:</string>
    <string name="DividerString">-</string>
    <string name="StartString">Start Scanning</string>
    <string name="ChechingPortsString">Querying Ports....</string>
    <string name="ProgressString">Querying ports...</string>
    <string name="portconsole">HELLOWORLD</string>
    <string name="TCPString">Scan TCP</string>
    <string name="UDPString">Scan UDP</string>
    <color name="white">#ffffff</color>
    <string name="zoomString">Enlarge</string>
    <string name="activity1">Port Detective Configuration</string>
    <string name="activity2">TCP / IP Port Scan Results:</string>
    <string name="describeString">Describe</string>
    <string name="activity3">Port Encyclopedia</string>
    <string name="decriptionconsoleString">Type in a port and press describe.</string><string name="about1">What does this application do?</string>
    <string name="about3">What is an IP or port?</string>
    <string name="about5">Networking and it\'s importance</string>
    <string name="about7">Meet the Developer</string>
    <string name="about2">This application detects ports that are open (or in use) on the local network be it Wifi or Mobile. It is capable of connecting to any host on the local network and opening TCP sockets in order to determine which ports are open. The user must specify the host (with an IP address) and a port range, and then can let the application handle the rest. It also comes with a handy Port Encylopedia which describes what certain ports do.</string>
    <string name="about4">An Internet Protocol address (IP address) is a numerical label assigned to each device (e.g., computer, printer) participating in a computer network. A port can be symbolized as a road to a destination. Ports allow devices to talk to other hosts on the internet on multiple &quot;roads&quot; or pathways, enabling simultaneous network communication. </string>
    
    <string name="about6">In the world of computers, networking is the practice of linking two or more computing devices together for the purpose of sharing data. It is also one of the most important, if not the most important, innovation that shapes who we are today. Thanks to networking, communication around the world has become instant, and a vast amount of knowledge can now be accessed from anywhere in the world, making it one of the most influential inventions in human history known as the internet.</string>
    <string name="about8">This application was developed by Mohammad Adib. Currently I am a sophomore in high school and am learning basic networking for a CCNA certification, I like math, science, and most of all technology. In the future I see myself dominating the IT industry, but for now, I hope this application has been helpful.  I can be reached at: md.adib@yahoo.com</string>
    <string name="activity4">About</string>
    <string name="WebString">Look up on the web.</string>
    <color name="linkColor">#ff0041ff</color>
    <string name="exportString">Export Port Scan Log</string>

</resources>