<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        >
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
        	android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about1"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right" >
                
                <TextView
                android:id="@+id/textView1"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/about2"
                />
                
            </TableRow>
            
            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about3"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right" >
                
                <TextView
                android:id="@+id/textView2"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/about4"
                />
                
            </TableRow>
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about5"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right" >
                
                <TextView
                android:id="@+id/textView3"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/about6"
                />
                
            </TableRow>
            
            <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about7"
            android:textColor="@color/white"
            android:textSize="16dp" />

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="right" >
                
                <TextView
                android:id="@+id/textView4"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/about8"
                />
                
            </TableRow>

        </LinearLayout>
    </ScrollView>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >
    </TableRow>

</LinearLayout>