<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/HostIPAddressLabel"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center|fill"
            android:text="@string/HostIPAddressString"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <EditText
            android:id="@+id/ip1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:nextFocusDown="@+id/ip2" />

        <requestFocus />

        <EditText
            android:id="@+id/ip2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:nextFocusDown="@+id/ip3" />

        <EditText
            android:id="@+id/ip3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:nextFocusDown="@+id/ip4" />

        <EditText
            android:id="@+id/ip4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:nextFocusDown="@+id/port1" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/PortRangeString"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <EditText
            android:id="@+id/port1"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:nextFocusDown="@+id/port2" >
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:nextFocusDown="@+id/startButton"
            android:text="@string/DividerString" />

        <EditText
            android:id="@+id/port2"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/startButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/StartString" />
    </TableRow>

</LinearLayout>